fixed info and scrollbar on firefox

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -15,6 +15,7 @@ html {
 ::-webkit-scrollbar-thumb {
     background-color: rgb(214, 214, 214);
     border-radius: 10px;
-    -webkit-box-shadow: rgba(0,0,0,.12) 0 3px 13px 1px;
   }
+
+
   
